[tool.poetry]
name = "ne-blog"
version = "0.0.1"
description = "Nesquate's Blog"
authors = ["Nesquate <nesquate@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
